<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChatSnap</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">SIGN IN</string>
    <string name="register_text_view">Not a user? Register now!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sign_up_error_message">Please make sure you enter a username, password and email address.</string>
    <string name="sign_up_error_title">Oops</string>
    <string name="login_error_message">Please make sure you enter a username and password</string>
    <string name="error_ok_button">Ok</string>
    <string name="empty_inbox_label">No new messages.</string>
    <string name="empty_friends_label">No friends, lol.</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="general_error">Sorry there was an error</string>
    <string name="video_file_size_warning">The selected video must be less than 10 megabytes</string>
    <string name="error_file_size_too_large">The selected file is too large. Select a new file.</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file</string>
    <string name="error_selecting_file_title">We\'re sorry</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending the message. Please try again.</string>
    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="app_subtitle">Not a rip-off...</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="content_desc_message_icon">Message icon</string>

</resources>
