<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.aych.chatsnap.LoginActivity"
                style="@style/AuthBackground">

    <ImageView
        android:id="@+id/backgroundImage"
        android:src="@drawable/background"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        style="@style/AuthTitle"/>

    <TextView

        android:id="@+id/subtitle"
        android:text="@string/app_subtitle"
        style="@style/AuthTitle.AuthSubTitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            style="@style/AuthEditText">

            <requestFocus/>
        </EditText>

        <EditText
            style="@style/AuthEditText"
            android:inputType="textPassword"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"/>

        </LinearLayout>

    <Button
        android:text="@string/login_button_text"
        android:id="@+id/loginButton"
        android:layout_below = "@id/editTextLayout"
        android:layout_alignParentLeft = "true"
        style="@style/AuthButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text_view"
        android:id="@+id/signUpText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"/>


</RelativeLayout>
